# backendPOCVueJS

./: db.sqlite3  pyproject.toml
core/: views.py
login/: settings.py  urls.py
